tests/error/poly_errors/var_mismatch.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(x: S) -> T:
13:        return x
                  ^
GuppyTypeError: Expected return value of type `T`, got `S`
